style.css
html, body {
  min-height: 100vh;
  position: relative;
  margin: 0;
}

a {
  text-decoration: none;
}

h1 {
  font-size: 2.5rem;
}

p {
  font-size: 1.25rem;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

#header-container {
  margin-right: auto;
  margin-left: auto;
  max-width: 1320px;
  display: flex;
}

#header {
  background-color: aqua;
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
}

#logo {
  margin-right: auto;
  padding-left: 1em;
  white-space: nowrap;
}

#nav-list {
  display: flex;
  flex-wrap: wrap;
}

.nav-item {
  padding: 1rem;
}

#content {
  max-width: 1320px;
  margin-right: auto;
  margin-left: auto;
}

#carousel {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

.slide {
  display: none;
}

#prev, #next {
  padding: 16px;
  font-size: 24px;
  font-weight: bold;
  border-radius: 0 3px 3px 0;
  cursor: pointer;
  user-select: none;
}

#next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

#prev:hover, #next:hover {
  background-color: rgba(0,0,0,0.8);
}

#current-slide {
  text-align: center;
}

.dot {
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbbbbb;
  border-radius: 50%;
  display: inline-block;
  cursor: pointer;
}

.dot:hover, .active {
  background-color: #717171;
}

#intro-text-wrapper {
  min-height: 720px;
  max-width: 1000px;
  margin: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

#submit-bar {
  margin: 24px;
  padding: 8px;
  border: solid;
  border-radius: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#user {
  margin-right: auto;
}

#profile-picture {
  height: 70px;
  width: 70px;
  border: solid;
  border-radius: 50%;
  object-fit: cover;
}

#form-button {
  padding-right: 12px;
}

#cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
}

.card {
  height: clamp(160px, 80%, 360px);
  width: clamp(120px, 80%, 280px);
  padding: 12px;
  background-color: greenyellow;
  border: solid;
  border-radius: 12px;
  justify-self: center;
  align-self: center;
}

#footer-container {
  width: 100%;
  position: absolute;
  bottom: 0;
  display: flex;
  justify-content: center;
}

#footer {
  height: 24px;
  max-width: 1320px;
  background-color: purple;
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
}

#notice {
  margin-right: auto;
}

#sm-list {
  display: flex;
  flex-wrap: wrap;
}

